# OpenGL-Graphics-Modelling-with-Blender-Object

./: .buildconfig  5thSEM_Graphics1  CMakeCache.txt  CMakeLists.txt  ICTC  Makefile  README.md  cmake_install.cmake  glad.c
App/: CMakeLists.txt  README  build.sh  main.cpp  run.sh
App/CPP_files/: Graphics.cpp  Transformation.cc  Transformation.cc.bak
App/header_files/: Graphics.h  Transformation.h
box/: box  ictc  makefile
box/src/: box.cpp  main.cpp  my_shader.h  objreader.h  shader.fs  shader.vs
box_assimp/: box  glad.c  glad.h  makefile
box_assimp/src/: box.cpp  camera.h  ictc_new_final2_textured_triangulated.mtl  mesh.h  model.h  my_shader.h  objreader.h  shader.fs  shader.vs
resource/: ictc_triangulated_texture.mtl  try  try.cpp
resource/new_ictc.obj/: ictc_triangulated.mtl
src/: main.cpp  my_shader.h  objreader.h  shader.fs  shader.vs
src/rough/: New_shader.h  verte
